--- a/package.json
+++ b/package.json
@@ -6,13 +6,22 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.11.3",
+    "reflect-metadata": "^0.1.14",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.4",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
+  },
+  "scripts": {
+    "dev": "ts-node-dev --transpile-only src/index.ts",
+    "typeorm":"./node_modules/.bin/typeorm"
+
   }
 }
