--- a/package.json
+++ b/package.json
@@ -4,24 +4,32 @@
   "main": "src/index.ts",
   "license": "MIT",
   "dependencies": {
+    "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "module-alias": "^2.2.3",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.14",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.4",
+    "@types/uuid": "^9.0.7",
+    "@types/validator": "^13.11.7",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   },
   "scripts": {
     "dev": "ts-node-dev --transpile-only src/index.ts",
-    "typeorm":"./node_modules/.bin/typeorm"
-
+    "typeorm": "./node_modules/.bin/typeorm"
+  },
+  "_moduleAliases":{
+    "@":"src"
   }
 }
